--- a/style.css
+++ b/style.css
@@ -213,6 +213,10 @@ body{
     top: 105px;
     left: 10px;    
     margin-right: 10px;
+    overflow: hidden !important;
+    display: -webkit-box !important;
+    -webkit-box-orient: vertical !important;
+    -webkit-line-clamp: 4 !important;
 }
 .cta {
     border-radius: 4px;
