--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ body{
     left: 0; right: 0;
     top: 0; bottom: 0;
     opacity: .7;
+    border-radius: 10px;
 }
 .intro_bg{
     position: absolute;
